--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -1,5 +1,34 @@
 nav {
-  border-bottom: solid 3px black;
+  border-bottom: solid 5px black;
   display: flex;
+  background-image: url('../../images/nav-img.jpg');
+  background-color:rgba(0, 0, 0, 0.5);
+  height: 12em;
+  background-size: cover;
   justify-content: space-between;
+}
+
+.btn {
+  margin: 15px;
+  height: 38px;
+  border-radius: 8px;
+  border: solid 1px black;
+  font-size: 1.5em;
+  width: 80%;
+  &:hover {
+    cursor: pointer;
+    background-color: lightpink;
+    color: white;
+  }
+}
+
+.img-bball {
+  height: 50px;
+  width: 50px;
+}
+
+h1 {
+  color: white;
+  font-size: 4em;
+  padding-left: 10px;
 }
