--- a/src/Components/Rules/Rules.scss
+++ b/src/Components/Rules/Rules.scss
@@ -1,12 +1,15 @@
 article {
-  border: solid 3px black;
-  height: 22em;
-  margin: 10em;
+  border: solid 4px black;
+  background-color:rgb(174, 142, 179);
+  height: 30em;
+  margin: 0 auto;
+  margin-top: 30px;
   text-align: center;
   width: 50%;
   &>ul {
     list-style-type: none;
     &>li {
+      font-size: 1.4em;
       margin: 1em;
     }
   }
