--- a/src/Containers/HomeContainer/HomeContainer.scss
+++ b/src/Containers/HomeContainer/HomeContainer.scss
@@ -1,23 +1,55 @@
 form {
   border: solid 3px black;
+  background-color:rgb(225, 207, 228);
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  height: 12em;
+  opacity: .9;
+  justify-content: space-evenly;
+  height: 25em;
   margin: 3em;
-  width: 50%;
+  width: 45%;
+  &:hover {
+    opacity: 1;
+    border-color: white;
+  }
 }
 
 label {
+  font-weight: bolder;
+  font-size: 1.5em;
   margin: 1em;
 }
 
 input {
+  padding-left: 10px;
+  font-size: 1em;
   margin: 1em;
+  height: 35px;
   width: 40%;
 }
 
 select {
+  padding-left: 10px;
   margin: 1em;
+  font-size: 1em;
+  height: 35px;
   width: 40%;
+}
+
+.div-select-team {
+  display: flex;
+}
+
+.btn-start {
+  font-size: 1em;
+  width: 20%;
+  font-weight: bolder;
+  height: 35px;
+  border-radius: 5px;
+  margin-left: 50em;
+  &:hover {
+    cursor: pointer;
+    background-color: rgb(225, 207, 228);
+    color: white;
+  }
 }
