--- a/src/Containers/GameContainer/GameContainer.scss
+++ b/src/Containers/GameContainer/GameContainer.scss
@@ -4,10 +4,11 @@
 
 .section-team {
   border: solid 2px black;
+  background-color: rgb(225, 207, 228);
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 38em;
+  height: 35em;
   margin: 3em;
   width: 40%;
   &>h2 {
@@ -15,5 +16,35 @@
   }
   &>h4 {
     text-align: center;
+  }
+}
+
+.game-label {
+  padding-left: 10px;
+  font-size: 1em;
+  margin: 0;
+}
+
+.team-name {
+  font-size: 2.5em;
+  margin: 0;
+}
+
+.h4-game {
+  margin: 0;
+}
+
+.btn-stats {
+  font-size: 1em;
+  width: 20%;
+  font-weight: bolder;
+  height: 35px;
+  margin-left: 42em;
+  border-radius: 5px;
+  &:hover {
+    cursor: pointer;
+    border: solid 2px black;
+    background-color:white;
+    color: black;
   }
 }
