Add style for score board

--- a/src/Containers/HomeContainer/HomeContainer.scss
+++ b/src/Containers/HomeContainer/HomeContainer.scss
@@ -46,7 +46,7 @@ select {
   font-weight: bolder;
   height: 35px;
   border-radius: 5px;
-  margin-left: 50em;
+  margin-left: 40%;
   &:hover {
     cursor: pointer;
     background-color: rgb(225, 207, 228);
