--- a/src/Containers/ScoreBoard/ScoreBoard.scss
+++ b/src/Containers/ScoreBoard/ScoreBoard.scss
@@ -17,11 +17,12 @@
   border: solid 4px black;
   background-color: rgb(225, 207, 228);
   height: 15em;
+  margin-top: 1em;
   width: 35%;
 }
 
 .h2-score {
-  font-size: 3em;
+  font-size: 2em;
   color: white;
   text-align: center;
 }
@@ -34,10 +35,16 @@
 }
 
 .h4-score-board {
+  border-bottom: solid 1px black;
   text-align: center;
-  font-size: 2em;
+  font-size: 1em;
   font-weight: bolder;
   margin: 0;
+  padding: 10px;
+}
+
+.btn-score-board {
+  border-bottom: solid 1px black;
 }
 
 .h5-skill {
