--- a/src/Components/Error/Error.scss
+++ b/src/Components/Error/Error.scss
@@ -1,7 +1,7 @@
 .section-error {
   border: solid 4px black;
   background-color:rgb(225, 207, 228);
-  height: 30em;
+  height: 15em;
   margin: 0 auto;
   margin-top: 30px;
   text-align: center;
@@ -9,21 +9,24 @@
 }
 
 h3 {
-    color:red;
-    font-size: 4em;
-    font-weight: bolder;
+  color:red;
+  font-size: 4em;
+  font-weight: bolder;
+  margin: 10px 10px;
 }
 
 .p-error {
-  font-size: 2em;
+  font-size: 1em;
+  margin: 10px 50px;
 }
 
 .button-error {
-  font-size: 1em;
-  width: 20%;
+  font-size: .8em;
+  width: 35%;
   font-weight: bolder;
   height: 35px;
   border-radius: 5px;
+  margin-top: 30px;
   &:hover {
     cursor: pointer;
     border: solid 2px black;
