--- a/src/Containers/GameContainer/GameContainer.scss
+++ b/src/Containers/GameContainer/GameContainer.scss
@@ -7,8 +7,7 @@
   background-color: rgb(225, 207, 228);
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  height: 35em;
+  height: 25em;
   margin: 3em;
   width: 40%;
   &>h2 {
@@ -19,10 +18,19 @@
   }
 }
 
+.div-team-info {
+  border-bottom: solid 1px black;
+  display: flex;
+  justify-content: space-between;
+  padding: 15px;
+  margin: 0;
+}
+
 .game-label {
   padding-left: 10px;
-  font-size: 1em;
+  font-size: .8em;
   margin: 0;
+  margin-top: 5px;
 }
 
 .team-name {
@@ -35,11 +43,12 @@
 }
 
 .btn-stats {
+  display: block;
   font-size: 1em;
   width: 20%;
   font-weight: bolder;
   height: 35px;
-  margin-left: 42em;
+  margin: 0 auto;
   border-radius: 5px;
   &:hover {
     cursor: pointer;
