--- a/src/Containers/ScoreBoard/ScoreBoard.scss
+++ b/src/Containers/ScoreBoard/ScoreBoard.scss
@@ -47,13 +47,13 @@
   padding: 10px;
 }
 
-.btn-score-board {
-  margin: 0 auto;
-  display: block;
-  border-bottom: solid 1px black;
-  margin-top: 100px;
-  width: 75%;
-}
+// .btn-score-board {
+//   margin: 0 auto;
+//   display: block;
+//   border-bottom: solid 1px black;
+//   margin-top: 100px;
+//   width: 75%;
+// }
 
 .h5-skill {
   text-align: center;
