Add error handeling in game container, make sure a user has selected 5 players

--- a/src/Containers/GameContainer/GameContainer.scss
+++ b/src/Containers/GameContainer/GameContainer.scss
@@ -57,3 +57,10 @@
     color: black;
   }
 }
+
+.p-select-player {
+  color: white;
+  display: flex;
+  font-size: 2em;
+  justify-content: center;
+}
