--- a/src/Containers/HomeContainer/HomeContainer.scss
+++ b/src/Containers/HomeContainer/HomeContainer.scss
@@ -1,10 +1,9 @@
 form {
-  border: solid 3px black;
+  border: solid 3px;
   background-color:rgb(225, 207, 228);
   display: flex;
   flex-direction: column;
   opacity: .9;
-  justify-content: space-evenly;
   height: 25em;
   margin: 3em;
   width: 30%;
@@ -18,6 +17,7 @@ label {
   font-weight: bolder;
   font-size: 1.5em;
   margin: 1em;
+  margin-bottom: 0;
 }
 
 input {
@@ -25,15 +25,18 @@ input {
   font-size: 1em;
   margin: 1em;
   height: 35px;
-  width: 40%;
+  outline: none;
+  width: 80%;
 }
 
-select {
+.select-skill {
+  cursor: pointer;
   padding-left: 10px;
   margin: 1em;
   font-size: 1em;
-  height: 35px;
-  width: 40%;
+  height: 40px;
+  outline: none;
+  width: 83%;
 }
 
 .div-select-team {
@@ -42,15 +45,21 @@ select {
 }
 
 .btn-start {
+  border: solid 3px;
+  background-color:rgb(225, 207, 228);
   font-size: 1em;
-  width: 20%;
-  font-weight: bolder;
-  height: 35px;
+  width: 25%;
+  font-weight: bold;
+  height: 50px;
   border-radius: 5px;
   margin-left: 40%;
+  outline: none;
+  opacity: .9;
   &:hover {
     cursor: pointer;
+    border-color: white; 
     background-color: rgb(225, 207, 228);
-    color: white;
+    color: black;
+    opacity: 1;
   }
 }
